--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/codeforseattle/seanetmap/issues"
+  },
+  "dependencies": {
+    "express": "^4.12.3"
   }
 }
