--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "compression": "^1.4.3",
-    "express": "^4.12.3"
+    "express": "^4.12.3",
+    "morgan": "^1.5.2"
   }
 }
