--- a/package.json
+++ b/package.json
@@ -27,6 +27,16 @@
     "compression": "^1.4.3",
     "express": "^4.12.3",
     "morgan": "^1.5.2",
-    "sqlite3": "^3.0.5"
+    "sqlite3": "^3.0.5",
+    "bunyan": "^1.3.5",
+    "bluebird": "^2.9.24",
+    "superagent-bluebird-promise": "^2.0.1"
+  },
+  "devDependencies": {
+    "jshint": "*",
+    "mocha": "*",
+    "must": "^0.12.0",
+    "nock": "^1.6.0",
+    "sinon": "*"
   }
 }
