--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "url": "https://github.com/codeforseattle/seanetmap/issues"
   },
   "dependencies": {
+    "bluebird": "^2.9.24",
     "body-parser": "^1.12.3",
+    "bunyan": "^1.3.5",
     "compression": "^1.4.3",
     "express": "^4.12.3",
+    "maxmind": "^0.5.5",
     "morgan": "^1.5.2",
     "sqlite3": "^3.0.5",
-    "bunyan": "^1.3.5",
-    "bluebird": "^2.9.24",
     "superagent-bluebird-promise": "^2.0.1"
   },
   "devDependencies": {
