--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "maxmind": "^0.5.5",
     "morgan": "^1.5.2",
     "sqlite3": "^3.0.5",
-    "superagent-bluebird-promise": "^2.0.1"
+    "superagent-bluebird-promise": "^2.0.1",
+    "turf": "^1.4.0",
+    "csv2geojson": "^4.0.0",
+    "async": "^0.9.0",
+    "topojson": "^1.6.19"
   },
   "devDependencies": {
     "jshint": "*",
