--- a/package.json
+++ b/package.json
@@ -17,25 +17,26 @@
     "internet",
     "vizualization"
   ],
-  "author": "Code For Seattle seanetmap Team <info@codeforseattle.org>",
+  "author": "Code For Seattle's SEANetMap Team <info@codeforseattle.org>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/codeforseattle/seanetmap/issues"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "bluebird": "^2.9.24",
     "body-parser": "^1.12.3",
     "bunyan": "^1.3.5",
     "compression": "^1.4.3",
+    "csv2geojson": "^4.0.0",
     "express": "^4.12.3",
+    "leaflet.locatecontrol": "^0.42.0",
     "maxmind": "^0.5.5",
     "morgan": "^1.5.2",
     "sqlite3": "^3.0.5",
     "superagent-bluebird-promise": "^2.0.1",
-    "turf": "^1.4.0",
-    "csv2geojson": "^4.0.0",
-    "async": "^0.9.0",
-    "topojson": "^1.6.19"
+    "topojson": "^1.6.19",
+    "turf": "^1.4.0"
   },
   "devDependencies": {
     "jshint": "*",
