--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "async": "^0.9.0",
     "bluebird": "^2.9.24",
     "body-parser": "^1.12.3",
+    "bower": "*",
     "bunyan": "^1.3.5",
     "compression": "^1.4.3",
     "csv2geojson": "^4.0.0",
