--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Broadband Mapping and Comparison Visualization",
   "main": "index.js",
   "scripts": {
+    "postinstall": "bower update",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
